# WindowsCMake

./: .cmake-format.yaml  .gitmodules  LICENSE  README.md
.github/workflows/: ci.yaml
Tests/Ninja/: CMakeLists.txt  CMakePresets.json  Toolchain.Ninja.Tests.ps1
Tests/NuGet/: CMakeLists.txt  CMakePresets.json  Toolchain.NuGet.Tests.ps1
Tests/Scripts/: CMake.ps1  Common.ps1  Ninja.ps1  NuGet.ps1  Test.ps1
WindowsCMake/: Asan.cmake  ClangFormat.cmake  CppWinRT.cmake  Imports.cmake  Midl.cmake  MidlRT.cmake  Msix.cmake  Ninja.cmake  NuGet.cmake  PowerShell.cmake  Signing.cmake  WindowsCMakeCommon.cmake
example/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  build.ps1
example/CommandLine/: CMakeLists.txt  main.cpp
example/CommandLineAsan/: CMakeLists.txt
example/CommandLineImportLibrary/: CMakeLists.txt  main.cpp
example/CommandLineModule/: main.cpp
example/CommandLineWinRT/: CMakeLists.txt  main.cpp
example/DWriteApplication/: CMakeLists.txt  DWriteApplication.cpp  DWriteApplication.rc  DWriteCore.cmake  Resource.h
example/RuntimeComponent/: CMakeLists.txt  Class.cpp  Class.h  pch.h
example/SharedLibrary/: DllMain.cpp
example/WinUIApplication/: CMakeLists.txt  Dependencies.cmake  Resource.h  WinUIApplication.cpp  WinUIApplication.rc  framework.h
example/WindowsApplication/: CMakeLists.txt
